# R-Type

./: .gitignore  AUnit.cpp  AUnit.hpp  CMakeList.txt  CMakeLists.txt  README.md
resources/shaders/: basic.frag  basic.vert
srcs/client/: AUnit.cpp  Animation.cpp  Animation.hpp  CMakeLists.txt  ClickableBtn.cpp  ClickableBtn.hpp  Editable.cpp  Editable.hpp  Game.cpp  Game.hpp  Key.hpp  KeyBind.hpp  Menu.cpp  Menu.hpp  MissileFactory.hpp  Player.cpp  Player.hpp  Time.cpp  Time.hpp  gcc.sh  main.cpp  rtype.ilk  test.cpp
srcs/client/core/: AMissile.cpp  AMissile.hpp  AUnit.cpp  AUnit.hpp  Client.cpp  Client.hpp  Game.cpp  Game.hpp  IGameHandler.hpp  IMenuHandler.hpp  List.cpp  List.hpp  Menu.cpp  Menu.hpp  MonsterFactory.cpp  MonsterFactory.hpp  Player.cpp  Player.hpp  main.cpp
srcs/client/graphics/: Animation.cpp  Animation.hpp  ClickableBtn.hpp  Editable.cpp  Editable.hpp  Error.cpp  Error.hpp  Font.cpp  Font.hpp  GameListItem.cpp  GameListItem.hpp  Key.hpp  List.cpp  List.hpp  Message.cpp  Message.hpp
srcs/client/misc/: Time.cpp
srcs/client/network/: NetClient.cpp  NetClient.hpp
srcs/client/shader/: basic.frag  basic.vert
srcs/client/sound/: SoundPlayer.cpp  SoundPlayer.hpp
srcs/client/test/monsters/: MonsterTest.cpp  MonsterTest.hpp
srcs/client/unit/: ABonus.cpp  ABonus.hpp  AMissile.cpp  AMissile.hpp  AMonster.cpp  AMonster.hpp  AUnit.cpp  AUnit.hpp  MissileFactory.cpp  MonsterFactory.cpp  MonsterFactory.hpp  UnitFactory.cpp  UnitFactory.hpp  UnitRender.hpp
srcs/client/unit/BasicMissile/: BasicMissile.cpp  BasicMissile.hpp
srcs/client/unit/BigHunter/: BigHunter.cpp  BigHunter.hpp
srcs/client/unit/DirectedMissile/: DirectedMissile.cpp  DirectedMissile.hpp
srcs/client/unit/DrBoom/: DrBoom.cpp  DrBoom.hpp
srcs/client/unit/KamikazPlane/: KamikazPlane.cpp  KamikazPlane.hpp
srcs/client/unit/MonsterTest/: MonsterTest.cpp  MonsterTest.cpp~  MonsterTest.hpp  MonsterTest.hpp~
srcs/client/unit/WaveMissile/: WaveMissile.cpp  WaveMissile.hpp
srcs/client/unit/missiles/: BasicMissile.cpp  BasicMissile.hpp
srcs/client/unit/monster/: MonsterTest.cpp  MonsterTest.hpp
srcs/client/unit/monsters/: MonsterTest.cpp  MonsterTest.hpp
srcs/common/: CMakeLists.txt  ILibLoader.hpp  UnitType.hpp  main.cpp
srcs/common/core/: ABonus.cpp  ABonus.hpp  AMissile.cpp  AMissile.hpp  AMonster.cpp  AMonster.hpp  AObstacle.cpp  AObstacle.hpp  AUnit.cpp  AUnit.hpp  MissileFactory.cpp  MissileFactory.hpp  MonsterFactory.hpp
srcs/common/core/missiles/: BasicMissile.cpp  BasicMissile.hpp
srcs/common/core/monsters/: MonsterTest.cpp  MonsterTest.hpp
srcs/common/misc/: Timer.cpp
srcs/common/misc/linux_specific/: CULibLoader.hpp
srcs/common/windows_specific/: CWLibLoader.cpp  CWLibLoader.hpp
srcs/misc/: APacket.cpp  APacket.hpp  CMakeLists.txt  ClientConnexionPacket.cpp  ClientConnexionPacket.hpp  ClientGameConnectPacket.cpp  ClientGameConnectPacket.hpp  ClientGameInfoPacket.cpp  ClientGameInfoPacket.hpp  ClientKeyboardPressPacket.cpp  ClientKeyboardPressPacket.hpp  KeyboardPressPacket.cpp  KeyboardPressPacket.hpp  Lock.cpp  Lock.hpp  ServerConnexionPacket.cpp  ServerConnexionPacket.hpp  ServerGameConnectPacket.cpp  ServerGameConnectPacket.hpp  ServerGameInfoPacket.cpp  ServerGameInfoPacket.hpp  ServerPingPacket.cpp  ServerPingPacket.hpp  ServerPlayerMovePacket.cpp  ServerPlayerMovePacket.hpp  ServerTimerRefreshPacket.cpp  ServerTimerRefreshPacket.hpp  ServerUnitDiePacket.cpp  ServerUnitDiePacket.hpp  ServerUnitSpawnPacket.cpp  ServerUnitSpawnPacket.hpp  Thread.hpp  main.cpp
srcs/misc/network/: CMakeLists.txt  IPacketHandler.hpp  ISocket.hpp  NetManager.cpp  NetManager.hpp  Networker.cpp  Networker.hpp  PacketHandler.cpp  PacketHandler.hpp  UdpSocket.cpp  UdpSocket.hpp  main_client.cpp  main_receive.cpp  main_send.cpp  main_server.cpp
srcs/server/: main.cpp
srcs/server/core/: ABonus.cpp  ABonus.hpp  AMissile.cpp  AMissile.hpp  AMonster.cpp  AMonster.hpp  AObstacle.cpp  AUnit.cpp  AUnit.hpp  BasicMissile.cpp  FactoryUnit.cpp  FactoryUnit.hpp  Game.cpp  Game.hpp  GameUtils.cpp  GameUtils.hpp  IDCreator.cpp  IDCreator.hpp  IGame.hpp  IGameUnitSender.hpp  IMap.hpp  IScore.hpp  IScoreList.hpp  LibLoader.cpp  LibLoader.hpp  Makefile  Map.cpp  Map.hpp  MissileFactory.cpp  MissileFactory.hpp  MonsterFactory.cpp  MonsterFactory.hpp  MonsterLabel.cpp  MonsterLabel.hpp  MonsterWave.cpp  MonsterWave.hpp  MonsterWaveManager.cpp  MonsterWaveManager.hpp  Player.cpp  Player.hpp  (+9 more)
srcs/server/core/QuadTree/: QuadTree.cpp  QuadTree.hpp  Rectangle.cpp  Rectangle.hpp
srcs/server/core/missiles/: BasicMissile.cpp  BasicMissile.hpp  DirectedMissile.cpp  DirectedMissile.hpp  WaveMissile.cpp  WaveMissile.hpp
srcs/server/core/monsters/: BigHunter.cpp  BigHunter.hpp  DrBoom.cpp  DrBoom.hpp  KamikazPlane.cpp  KamikazPlane.hpp  MonsterTest.cpp  MonsterTest.hpp
srcs/server/core/windows_specific/: CWLibLoader.hpp
srcs/server/misc/: ObjectCast.hpp  Timer.cpp  Timer.hpp
srcs/server/misc/linux_specific/: CULibLoader.cpp
srcs/server/misc/windows_specific/: CWLibLoader.cpp
srcs/server/network/: NetServer.cpp  NetServer.hpp
